# stalker-console

./: .gitignore  CMakeLists.txt  README.md
assets/levels/: 0.txt
source/: camera.cpp  camera.h  coloredtext.h  entity.cpp  entity.h  game.cpp  game.h  item.cpp  item.h  level.cpp  level.h  main.cpp  texture.h
